# positron

./: Cargo.toml  README.md  spec.md
docs/: p-locks.md  time-model.md
examples/: cli_host.rs
src/: condition.rs  lib.rs  locks.rs  output.rs  pattern.rs  retrig.rs  rng.rs  sequencer.rs  step.rs  track.rs  unit.rs
tests/: chaining.rs  conditions.rs  determinism.rs  fuzz.rs  golden.rs  golden_512.txt  locks.rs  polymeter.rs  retrig.rs  serde_roundtrip.rs  timing.rs  transport.rs
tests/common/: mod.rs
