[package]
name = "plock"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Headless Elektron-like step sequencer"
license = "MIT OR Apache-2.0"

# Basic optimization in dev so large by-value moves (TickOutput is ~42 KB,
# Pattern ~44 KB) get elided instead of stacking up in unoptimized builds.
# Debug assertions remain enabled.
[profile.dev]
opt-level = 1

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
# Serialize/Deserialize for Pattern and everything inside it (never the
# Sequencer's runtime state). Deserialization re-validates every invariant;
# the lock pool serializes sparsely and is structurally validated on load.
serde = ["dep:serde"]

[dev-dependencies]
proptest = "1"
serde_json = "1"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Casts below are invariant-protected (track indices < 16, step indices < 128).
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
# The engine is deterministic and passes f32 values through unchanged;
# tests intentionally assert exact equality.
float_cmp = "allow"
# Fixed-size storage is a design goal (no allocation in tick()); the
# TickOutput event array (~42 KB) and a Track's 128-step array are the big
# ones, documented in spec.md and README.
large_stack_arrays = "allow"
# Event (272 B at 64 lanes) is plain-old-data deliberately copied by value
# into fixed-capacity buffers; one memcpy is the point, not an accident.
large_types_passed_by_value = "allow"
